--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -2,9 +2,9 @@ name: Express CI with AI
 
 on:
   pull_request:
-    branches: [main]
+    branches: [master]
   push:
-    branches: [main]
+    branches: [master]
 
 jobs:
   build:
