--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,13 +47,14 @@ jobs:
         RESPONSE=$(curl -s https://api.openai.com/v1/chat/completions \
           -H "Authorization: Bearer $OPENAI_API_KEY" \
           -H "Content-Type: application/json" \
-          -d '{
-            "model": "gpt-3.5-turbo",
-            "messages": [
-              {"role": "system", "content": "You are an experienced Node.js developer. Explain this test failure."},
-              {"role": "user", "content": "'"$CONTENT"'"}
+          -d "{
+            \"model\": \"gpt-3.5-turbo\",
+            \"messages\": [
+              {\"role\": \"system\", \"content\": \"You are an experienced Node.js developer. Explain this test failure.\"},
+              {\"role\": \"user\", \"content\": \"$CONTENT\"}
             ]
-          }')
+          }")
 
-        echo "===== GPT EXPLANATION ====="
-        echo "$RESPONSE" | jq -r '.choices[0].message.content'
+        echo "===== GPT EXPLANATION START ====="
+        echo "$RESPONSE"
+        echo "===== GPT EXPLANATION END ====="
